--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,4 @@
-APP_NAME=Conferire
+APP_NAME=Conciliador
 APP_ENV=local
 APP_KEY=
 APP_DEBUG=true
@@ -20,13 +20,13 @@ LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
 DB_CONNECTION=pgsql
-DB_HOST=127.0.0.1
-DB_PORT=5432
-DB_DATABASE=conferire
+DB_HOST=localhost
+DB_PORT=5435
+DB_DATABASE=conciliador
 DB_USERNAME=postgres
 DB_PASSWORD=
 
-SESSION_DRIVER=database
+SESSION_DRIVER=redis
 SESSION_LIFETIME=120
 SESSION_ENCRYPT=false
 SESSION_PATH=/
@@ -34,17 +34,17 @@ SESSION_DOMAIN=null
 
 BROADCAST_CONNECTION=log
 FILESYSTEM_DISK=local
-QUEUE_CONNECTION=database
+QUEUE_CONNECTION=redis
 
-CACHE_STORE=database
+CACHE_STORE=redis
 CACHE_PREFIX=
 
 MEMCACHED_HOST=127.0.0.1
 
-REDIS_CLIENT=phpredis
-REDIS_HOST=127.0.0.1
+REDIS_CLIENT=predis
+REDIS_HOST=localhost
 REDIS_PASSWORD=null
-REDIS_PORT=6379
+REDIS_PORT=6380
 
 MAIL_MAILER=log
 MAIL_HOST=127.0.0.1
